--- a/index.html
+++ b/index.html
@@ -1,103 +1,171 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
-<title>Romaneio • Login</title>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://cdn.jsdelivr.net/npm/picocss@2.0.0-alpha1/css/pico.min.css" rel="stylesheet">
-<style>
-  :root { --pico-font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol", sans-serif; }
-  body{display:grid;place-items:center;min-height:100vh}
-  .card{max-width:520px;width:100%}
-  .brand{display:flex;gap:.6rem;align-items:center}
-  .brand span{font-size:1.4rem;font-weight:700}
-  .muted{font-size:.9rem;opacity:.8}
-  .error{background:#3b0f13;border:1px solid #5b1b22;color:#fdd;border-radius:.6rem;padding:.6rem .8rem}
-  .ok{background:#0f3b1c;border:1px solid #1b5b2b;color:#dff;border-radius:.6rem;padding:.6rem .8rem}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Romaneio • Login</title>
+  <meta name="color-scheme" content="dark light" />
+  <!-- TailwindCSS via CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Tema salvo
+    const themeSaved = localStorage.getItem("theme") || "dark";
+    if (themeSaved === "dark") document.documentElement.classList.add("dark");
+  </script>
+  <style>
+    /* Suaviza rolagem e evita zoom feio em iOS */
+    html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; }
+  </style>
 </head>
-<body>
+<body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 min-h-screen flex items-center justify-center p-4">
+  <div class="w-full max-w-md">
+    <!-- Card -->
+    <div class="rounded-2xl shadow-xl border border-slate-200 dark:border-slate-800 bg-white/70 dark:bg-slate-900/60 backdrop-blur p-6">
+      <div class="flex items-center justify-between mb-6">
+        <div class="flex items-center gap-3">
+          <span class="text-3xl">🚚</span>
+          <h1 class="text-2xl font-semibold">Romaneio</h1>
+        </div>
+        <button id="btnTheme" class="inline-flex items-center justify-center rounded-xl px-3 py-2 text-sm border border-slate-300 dark:border-slate-700 hover:bg-slate-100 dark:hover:bg-slate-800">
+          <span id="icoTheme">🌙</span>
+        </button>
+      </div>
 
-<main class="container">
-  <article class="card">
-    <header class="brand">
-      <span>🚚</span><span>Romaneio</span>
-      <span class="muted" style="margin-left:auto"><a href="#" id="theme">🌙/☀️</a></span>
-    </header>
+      <form id="frm" class="space-y-4">
+        <div>
+          <label class="block text-sm mb-1">Usuário</label>
+          <input id="usuario" required
+                 class="w-full rounded-xl border border-slate-300 dark:border-slate-700 bg-white dark:bg-slate-900 px-3 py-2 outline-none focus:ring-2 ring-blue-500"
+                 placeholder="admin" value="admin">
+        </div>
+        <div>
+          <label class="block text-sm mb-1">Senha</label>
+          <input id="senha" type="password" required
+                 class="w-full rounded-xl border border-slate-300 dark:border-slate-700 bg-white dark:bg-slate-900 px-3 py-2 outline-none focus:ring-2 ring-blue-500"
+                 placeholder="••••••" value="123456">
+        </div>
 
-    <form id="frmLogin">
-      <label>Usuário
-        <input type="text" id="usuario" placeholder="admin" value="admin" required>
-      </label>
-      <label>Senha
-        <input type="password" id="senha" placeholder="••••••" value="123456" required>
-      </label>
-      <button type="submit">Entrar</button>
-    </form>
+        <button id="btnLogin" type="submit"
+          class="w-full rounded-xl bg-blue-600 hover:bg-blue-700 text-white font-medium py-2.5 transition">
+          Entrar
+        </button>
 
-    <details style="margin-top:.8rem">
-      <summary>Testar conexão</summary>
-      <small class="muted">Se falhar aqui, o backend não está acessível pelo navegador.</small>
-      <div id="echoBox" style="margin-top:.4rem"></div>
-      <button id="btnEcho">Rodar /echo</button>
-    </details>
+        <div class="pt-2">
+          <details class="text-sm">
+            <summary class="cursor-pointer select-none">Testar conexão</summary>
+            <div class="mt-2 flex items-center gap-2">
+              <button type="button" id="btnPing"
+                class="rounded-lg border border-slate-300 dark:border-slate-700 px-3 py-1.5 hover:bg-slate-100 dark:hover:bg-slate-800">
+                /ping
+              </button>
+              <pre id="pingOut" class="text-xs opacity-80"></pre>
+            </div>
+          </details>
+        </div>
 
-    <div id="msg" style="margin-top:.8rem"></div>
-  </article>
-</main>
+        <div id="msg" class="hidden mt-2 rounded-xl px-3 py-2 text-sm"></div>
+      </form>
 
-<script>
-const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
+      <p class="mt-6 text-center text-xs opacity-60">
+        v1 • Publicado no GitHub Pages
+      </p>
+    </div>
+  </div>
 
-const $ = (q)=>document.querySelector(q);
-const msg = (html, ok=false)=>{ const m=$("#msg"); m.className= ok?"ok":"error"; m.innerHTML=html; if(!html) m.className=""; };
+  <script>
+    // ==================== CONFIG ====================
+    const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
+    // =================================================
 
-$("#frmLogin").addEventListener("submit", async (ev)=>{
-  ev.preventDefault(); msg("");
-  try{
-    const usuario = $("#usuario").value.trim();
-    const senha   = $("#senha").value.trim();
-    const r = await fetch(API_BASE+"?path=/login", {
-      method:"POST",
-      headers:{ "Content-Type":"application/json;charset=utf-8" },
-      body: JSON.stringify({usuario, senha})
+    const $ = (sel) => document.querySelector(sel);
+    const msg = $("#msg");
+    const icoTheme = $("#icoTheme");
+    const btnTheme = $("#btnTheme");
+    const frm = $("#frm");
+    const btnPing = $("#btnPing");
+    const pingOut = $("#pingOut");
+
+    // Tema
+    function setTheme(t) {
+      localStorage.setItem("theme", t);
+      document.documentElement.classList.toggle("dark", t === "dark");
+      icoTheme.textContent = t === "dark" ? "🌙" : "☀️";
+    }
+    btnTheme.addEventListener("click", () => {
+      setTheme(document.documentElement.classList.contains("dark") ? "light" : "dark");
     });
-    const j = await r.json();
-    if(j.error){ msg(j.error); return; }
-    localStorage.setItem("session", JSON.stringify(j.session));
-    location.href = "app.html#rom";
-  }catch(e){
-    msg("Erro de rede: "+e);
-  }
-});
 
-$("#btnEcho").addEventListener("click", async ()=>{
-  $("#echoBox").innerText = "Testando...";
-  try{
-    const r = await fetch(API_BASE+"?path=/echo", { method:"POST", headers:{ "Content-Type":"application/json" }, body:"{}" });
-    const j = await r.json();
-    $("#echoBox").innerText = JSON.stringify(j, null, 2);
-  }catch(e){
-    $("#echoBox").innerText = "Falhou: "+e;
-  }
-});
+    // Helpers
+    function showError(text){
+      msg.className = "mt-2 rounded-xl px-3 py-2 text-sm bg-red-600/10 text-red-700 dark:text-red-300 border border-red-600/30";
+      msg.textContent = text;
+      msg.classList.remove("hidden");
+    }
+    function showOk(text){
+      msg.className = "mt-2 rounded-xl px-3 py-2 text-sm bg-emerald-600/10 text-emerald-700 dark:text-emerald-300 border border-emerald-600/30";
+      msg.textContent = text;
+      msg.classList.remove("hidden");
+    }
+    function hideMsg(){ msg.classList.add("hidden"); }
 
-// tema
-(() => {
-  const k="rom_theme";
-  const cur = localStorage.getItem(k)||"dark";
-  document.documentElement.setAttribute("data-theme",cur);
-  $("#theme").addEventListener("click",(e)=>{
-    e.preventDefault();
-    const t = (localStorage.getItem(k)||"dark")==="dark"?"light":"dark";
-    localStorage.setItem(k,t);
-    document.documentElement.setAttribute("data-theme",t);
-  });
-})();
-</script>
+    // Teste /ping
+    btnPing.addEventListener("click", async () => {
+      hideMsg(); pingOut.textContent = "…";
+      try{
+        const r = await fetch(API_BASE+"?path=/ping", {
+          method: "POST",
+          headers: { "Content-Type": "text/plain;charset=utf-8" },
+          body: "{}",
+          // IMPORTANTÍSSIMO: evita preflight CORS
+          mode: "cors",
+        });
+        const j = await r.json();
+        pingOut.textContent = JSON.stringify(j, null, 2);
+        if(j && j.pong) showOk("API OK");
+        else showError("API respondeu, mas sem pong.");
+      }catch(e){
+        showError("Falha no ping: "+e);
+        pingOut.textContent = "";
+      }
+    });
+
+    // Login
+    frm.addEventListener("submit", async (ev) => {
+      ev.preventDefault(); hideMsg();
+      const usuario = $("#usuario").value.trim();
+      const senha   = $("#senha").value.trim();
+      if(!usuario || !senha){
+        showError("Preencha usuário e senha.");
+        return;
+      }
+      $("#btnLogin").disabled = true;
+
+      try{
+        const r = await fetch(API_BASE+"?path=/login", {
+          method: "POST",
+          headers: { "Content-Type": "text/plain;charset=utf-8" },
+          body: JSON.stringify({usuario, senha}),
+          mode: "cors",
+        });
+        const j = await r.json();
+
+        if(j.error){ showError(j.error); }
+        else if(j.session && j.session.token){
+          // Guarda sessão e vai pro app
+          localStorage.setItem("rom.session", JSON.stringify(j.session));
+          location.href = "./app.html?v="+Date.now();
+        }else{
+          showError("Resposta inesperada do servidor.");
+        }
+      }catch(e){
+        showError("Erro de rede: "+e);
+      }finally{
+        $("#btnLogin").disabled = false;
+      }
+    });
+
+    // Mantém ícone inicial do tema
+    icoTheme.textContent = (localStorage.getItem("theme")||"dark")==="dark" ? "🌙" : "☀️";
+  </script>
 </body>
 </html>
