--- a/index.html
+++ b/index.html
@@ -1,171 +1,152 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Romaneio • Login</title>
-  <meta name="color-scheme" content="dark light" />
-  <!-- TailwindCSS via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    // Tema salvo
-    const themeSaved = localStorage.getItem("theme") || "dark";
-    if (themeSaved === "dark") document.documentElement.classList.add("dark");
-  </script>
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <style>
-    /* Suaviza rolagem e evita zoom feio em iOS */
-    html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; }
+    :root{
+      --bg:#0b1220; --card:#111a2b; --text:#e5e9f0; --muted:#9aa3b2; --primary:#2563eb; --danger:#ef4444; --ok:#16a34a; --input:#0f172a; --ring:#3b82f6;
+    }
+    .light{
+      --bg:#f6f7fb; --card:#ffffff; --text:#0b1220; --muted:#5c6470; --primary:#2563eb; --danger:#dc2626; --ok:#16a34a; --input:#f1f5f9; --ring:#3b82f6;
+    }
+    *{box-sizing:border-box;font-family:Inter,system-ui,Segoe UI,Roboto,Arial}
+    body{margin:0;background:var(--bg);color:var(--text)}
+    .container{max-width:420px;margin:5vh auto;padding:24px}
+    .card{background:var(--card);border-radius:18px;padding:28px;box-shadow:0 10px 30px rgba(0,0,0,.25)}
+    h1{margin:0 0 18px;font-size:26px;display:flex;align-items:center;gap:10px}
+    .muted{color:var(--muted);font-size:14px;margin-bottom:18px}
+    label{display:block;font-size:14px;margin:10px 0 6px}
+    input{width:100%;padding:12px 14px;border-radius:12px;border:1px solid transparent;background:var(--input);color:var(--text);outline:none}
+    input:focus{border-color:var(--ring);box-shadow:0 0 0 3px rgba(59,130,246,.25)}
+    .row{display:flex;gap:10px}
+    .btn{display:inline-flex;align-items:center;justify-content:center;gap:8px;padding:12px 16px;border-radius:12px;border:0;cursor:pointer;color:white;background:var(--primary)}
+    .btn.secondary{background:#334155}
+    .btn.mini{padding:8px 10px;font-size:12px}
+    .topbar{display:flex;justify-content:flex-end;margin-bottom:12px;gap:8px}
+    .alert{margin-top:14px;background:rgba(239,68,68,.15);color:#fecaca;padding:10px 12px;border-radius:10px;display:none}
+    .ok{margin-top:14px;background:rgba(22,163,74,.15);color:#bbf7d0;padding:10px 12px;border-radius:10px;display:none}
+    /* progress */
+    #progress{position:fixed;left:0;top:0;height:3px;width:0;background:var(--primary);z-index:9999;transition:width .25s}
+    .foot{margin-top:10px;display:flex;justify-content:space-between;align-items:center}
   </style>
 </head>
-<body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 min-h-screen flex items-center justify-center p-4">
-  <div class="w-full max-w-md">
-    <!-- Card -->
-    <div class="rounded-2xl shadow-xl border border-slate-200 dark:border-slate-800 bg-white/70 dark:bg-slate-900/60 backdrop-blur p-6">
-      <div class="flex items-center justify-between mb-6">
-        <div class="flex items-center gap-3">
-          <span class="text-3xl">🚚</span>
-          <h1 class="text-2xl font-semibold">Romaneio</h1>
-        </div>
-        <button id="btnTheme" class="inline-flex items-center justify-center rounded-xl px-3 py-2 text-sm border border-slate-300 dark:border-slate-700 hover:bg-slate-100 dark:hover:bg-slate-800">
-          <span id="icoTheme">🌙</span>
-        </button>
+<body>
+  <div id="progress"></div>
+  <div class="container">
+    <div class="topbar">
+      <button id="btn-theme" class="btn mini secondary" title="Tema">🌙/☀️</button>
+      <button id="btn-hard" class="btn mini secondary" title="Forçar atualização">↻ Atualizar</button>
+    </div>
+    <div class="card">
+      <h1>🚚 Romaneio</h1>
+      <div class="muted">Acesse com seu usuário e senha.</div>
+
+      <label for="user">Usuário</label>
+      <input id="user" autocomplete="username" placeholder="admin">
+
+      <label for="pass">Senha</label>
+      <input id="pass" type="password" autocomplete="current-password" placeholder="••••••">
+
+      <div class="row" style="margin-top:16px">
+        <button id="btn-login" class="btn" style="flex:1">Entrar</button>
+        <button id="btn-test" class="btn secondary">Testar conexão</button>
       </div>
 
-      <form id="frm" class="space-y-4">
-        <div>
-          <label class="block text-sm mb-1">Usuário</label>
-          <input id="usuario" required
-                 class="w-full rounded-xl border border-slate-300 dark:border-slate-700 bg-white dark:bg-slate-900 px-3 py-2 outline-none focus:ring-2 ring-blue-500"
-                 placeholder="admin" value="admin">
-        </div>
-        <div>
-          <label class="block text-sm mb-1">Senha</label>
-          <input id="senha" type="password" required
-                 class="w-full rounded-xl border border-slate-300 dark:border-slate-700 bg-white dark:bg-slate-900 px-3 py-2 outline-none focus:ring-2 ring-blue-500"
-                 placeholder="••••••" value="123456">
-        </div>
+      <div id="msg-err" class="alert"></div>
+      <div id="msg-ok"  class="ok"></div>
 
-        <button id="btnLogin" type="submit"
-          class="w-full rounded-xl bg-blue-600 hover:bg-blue-700 text-white font-medium py-2.5 transition">
-          Entrar
-        </button>
-
-        <div class="pt-2">
-          <details class="text-sm">
-            <summary class="cursor-pointer select-none">Testar conexão</summary>
-            <div class="mt-2 flex items-center gap-2">
-              <button type="button" id="btnPing"
-                class="rounded-lg border border-slate-300 dark:border-slate-700 px-3 py-1.5 hover:bg-slate-100 dark:hover:bg-slate-800">
-                /ping
-              </button>
-              <pre id="pingOut" class="text-xs opacity-80"></pre>
-            </div>
-          </details>
-        </div>
-
-        <div id="msg" class="hidden mt-2 rounded-xl px-3 py-2 text-sm"></div>
-      </form>
-
-      <p class="mt-6 text-center text-xs opacity-60">
-        v1 • Publicado no GitHub Pages
-      </p>
+      <div class="foot">
+        <small class="muted">v<span id="v"></span></small>
+      </div>
     </div>
   </div>
 
-  <script>
-    // ==================== CONFIG ====================
-    const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
-    // =================================================
+<script>
+/* ======= CONFIG ======= */
+const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec"; // <- sua URL /exec
+const VERSION  = "1.0.3";
 
-    const $ = (sel) => document.querySelector(sel);
-    const msg = $("#msg");
-    const icoTheme = $("#icoTheme");
-    const btnTheme = $("#btnTheme");
-    const frm = $("#frm");
-    const btnPing = $("#btnPing");
-    const pingOut = $("#pingOut");
+/* ======= THEME ======= */
+function applyTheme(){
+  const t = localStorage.getItem("theme") || "dark";
+  if(t==="light") document.documentElement.classList.add("light");
+  else document.documentElement.classList.remove("light");
+}
+applyTheme();
+document.getElementById("btn-theme").onclick = ()=>{
+  const cur = localStorage.getItem("theme") || "dark";
+  const nx = cur==="dark"?"light":"dark";
+  localStorage.setItem("theme", nx);
+  applyTheme();
+};
 
-    // Tema
-    function setTheme(t) {
-      localStorage.setItem("theme", t);
-      document.documentElement.classList.toggle("dark", t === "dark");
-      icoTheme.textContent = t === "dark" ? "🌙" : "☀️";
-    }
-    btnTheme.addEventListener("click", () => {
-      setTheme(document.documentElement.classList.contains("dark") ? "light" : "dark");
+/* ======= HARD REFRESH ======= */
+document.getElementById("btn-hard").onclick = ()=>{
+  const q = new URLSearchParams(location.search);
+  q.set("v", Date.now());
+  location.href = location.pathname + "?" + q.toString();
+};
+
+/* ======= PROGRESS ======= */
+const progress = {
+  el: document.getElementById("progress"),
+  start(){ this.el.style.width="10%"; requestAnimationFrame(()=> this.el.style.width="70%"); },
+  end(){ this.el.style.width="100%"; setTimeout(()=> this.el.style.width="0", 250); }
+};
+
+/* ======= UI helpers ======= */
+const $ = sel => document.querySelector(sel);
+const msgErr = $("#msg-err"), msgOk = $("#msg-ok");
+function setErr(t){ msgOk.style.display="none"; if(!t){msgErr.style.display="none";return} msgErr.textContent=t; msgErr.style.display="block"; }
+function setOk(t){ msgErr.style.display="none"; if(!t){msgOk.style.display="none";return} msgOk.textContent=t; msgOk.style.display="block"; }
+
+$("#v").textContent = VERSION;
+
+/* ======= API helpers ======= */
+async function post(path, body){
+  progress.start();
+  try{
+    const r = await fetch(API_BASE+"?path="+encodeURIComponent(path), {
+      method:"POST",
+      headers:{"Content-Type":"application/json;charset=utf-8"},
+      body: JSON.stringify(body||{})
     });
+    const j = await r.json();
+    return j;
+  }finally{
+    progress.end();
+  }
+}
 
-    // Helpers
-    function showError(text){
-      msg.className = "mt-2 rounded-xl px-3 py-2 text-sm bg-red-600/10 text-red-700 dark:text-red-300 border border-red-600/30";
-      msg.textContent = text;
-      msg.classList.remove("hidden");
-    }
-    function showOk(text){
-      msg.className = "mt-2 rounded-xl px-3 py-2 text-sm bg-emerald-600/10 text-emerald-700 dark:text-emerald-300 border border-emerald-600/30";
-      msg.textContent = text;
-      msg.classList.remove("hidden");
-    }
-    function hideMsg(){ msg.classList.add("hidden"); }
+/* ======= actions ======= */
+$("#btn-test").onclick = async ()=>{
+  setErr(""); setOk("");
+  const j = await post("/ping", {});
+  if(j && j.pong) setOk("Conectado: "+j.at); else setErr("Falha no ping");
+};
 
-    // Teste /ping
-    btnPing.addEventListener("click", async () => {
-      hideMsg(); pingOut.textContent = "…";
-      try{
-        const r = await fetch(API_BASE+"?path=/ping", {
-          method: "POST",
-          headers: { "Content-Type": "text/plain;charset=utf-8" },
-          body: "{}",
-          // IMPORTANTÍSSIMO: evita preflight CORS
-          mode: "cors",
-        });
-        const j = await r.json();
-        pingOut.textContent = JSON.stringify(j, null, 2);
-        if(j && j.pong) showOk("API OK");
-        else showError("API respondeu, mas sem pong.");
-      }catch(e){
-        showError("Falha no ping: "+e);
-        pingOut.textContent = "";
-      }
-    });
+$("#btn-login").onclick = async ()=>{
+  setErr(""); setOk("");
+  const usuario = $("#user").value.trim();
+  const senha   = $("#pass").value.trim();
+  if(!usuario || !senha){ setErr("Informe usuário e senha"); return; }
+  const j = await post("/login", {usuario, senha});
+  if(j && j.session && j.session.token){
+    localStorage.setItem("session", JSON.stringify(j.session));
+    // vai para o app com cache-buster
+    location.href = "app.html?v="+Date.now()+"#rom";
+  }else{
+    setErr(j && j.error ? j.error : "Falha ao entrar");
+  }
+};
 
-    // Login
-    frm.addEventListener("submit", async (ev) => {
-      ev.preventDefault(); hideMsg();
-      const usuario = $("#usuario").value.trim();
-      const senha   = $("#senha").value.trim();
-      if(!usuario || !senha){
-        showError("Preencha usuário e senha.");
-        return;
-      }
-      $("#btnLogin").disabled = true;
-
-      try{
-        const r = await fetch(API_BASE+"?path=/login", {
-          method: "POST",
-          headers: { "Content-Type": "text/plain;charset=utf-8" },
-          body: JSON.stringify({usuario, senha}),
-          mode: "cors",
-        });
-        const j = await r.json();
-
-        if(j.error){ showError(j.error); }
-        else if(j.session && j.session.token){
-          // Guarda sessão e vai pro app
-          localStorage.setItem("rom.session", JSON.stringify(j.session));
-          location.href = "./app.html?v="+Date.now();
-        }else{
-          showError("Resposta inesperada do servidor.");
-        }
-      }catch(e){
-        showError("Erro de rede: "+e);
-      }finally{
-        $("#btnLogin").disabled = false;
-      }
-    });
-
-    // Mantém ícone inicial do tema
-    icoTheme.textContent = (localStorage.getItem("theme")||"dark")==="dark" ? "🌙" : "☀️";
-  </script>
+/* enter key */
+["user","pass"].forEach(id=> $( "#"+id ).addEventListener("keydown",e=>{ if(e.key==="Enter") $("#btn-login").click(); }));
+</script>
 </body>
 </html>
