--- a/index.html
+++ b/index.html
@@ -1,133 +1,150 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Romaneio • Login</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0b1220; --card:#111a2b; --muted:#8ea1c0; --text:#eaf0ff; --primary:#3b82f6; --danger:#ef4444; --ok:#22c55e;
-      --shadow:0 8px 28px rgba(0,0,0,.25)
+      --bg:#0b1320; --card:#121b2e; --muted:#7b8aa1; --text:#eaf1ff;
+      --primary:#4c8dff; --primary-600:#3a74d6; --success:#19c37d; --danger:#ff6b6b;
+      --shadow:0 18px 40px rgba(0,0,0,.35);
     }
-    [data-theme="light"]{ --bg:#f6f7fb; --card:#ffffff; --muted:#4b5563; --text:#111827; --primary:#2563eb; --danger:#dc2626; --ok:#16a34a; --shadow:0 8px 24px rgba(2,6,23,.08)}
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font:16px/1.4 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial}
-    .wrap{min-height:100dvh;display:grid;place-items:center;padding:32px}
-    .card{width:100%;max-width:520px;background:var(--card);border-radius:20px;padding:28px;box-shadow:var(--shadow)}
-    h1{display:flex;gap:10px;align-items:center;margin:0 0 16px 0;font-size:28px}
-    .row{display:flex;flex-direction:column;gap:6px;margin:12px 0}
-    label{font-weight:600;color:var(--muted)}
-    input{width:100%;border:1px solid rgba(148,163,184,.25);background:transparent;color:var(--text);border-radius:10px;padding:12px 14px;outline:none}
-    input:focus{border-color:var(--primary)}
-    .actions{display:flex;gap:10px;margin-top:12px}
-    button{appearance:none;border:0;border-radius:12px;padding:12px 16px;cursor:pointer;font-weight:600}
-    .btn-primary{background:var(--primary);color:#fff}
-    .btn-ghost{background:transparent;color:var(--text);border:1px solid rgba(148,163,184,.25)}
-    .tiny{color:var(--muted);font-size:12px;margin-top:8px}
-    .topbar{position:absolute;inset:24px 24px auto auto;display:flex;gap:10px}
-    .pill{background:var(--card);color:var(--text);border:1px solid rgba(148,163,184,.25);padding:10px 14px;border-radius:999px;cursor:pointer}
-    .alert{margin-top:12px;background:rgba(239,68,68,.12);border:1px solid rgba(239,68,68,.35);color:#fecaca;padding:10px;border-radius:10px}
-    .ok{background:rgba(34,197,94,.12);border-color:rgba(34,197,94,.35);color:#bbf7d0}
-    .spinner{display:inline-block;width:16px;height:16px;border:2px solid rgba(255,255,255,.35);border-top-color:#fff;border-radius:50%;animation:spin 1s linear infinite;vertical-align:-3px;margin-right:8px}
-    @keyframes spin{to{transform:rotate(360deg)}}
+    *{box-sizing:border-box} html,body{height:100%} body{
+      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      background:linear-gradient(180deg,#0b1320 0%, #0d1528 100%); color:var(--text);
+      display:flex; align-items:center; justify-content:center; padding:24px;
+    }
+    .wrap{width:100%; max-width:560px}
+    .row-top{display:flex; gap:10px; justify-content:flex-end; margin-bottom:14px}
+    .btn{
+      appearance:none; border:0; border-radius:12px; padding:10px 14px;
+      background:#1a2340; color:#dfe8ff; cursor:pointer; box-shadow:var(--shadow);
+      display:inline-flex; align-items:center; gap:8px; font-weight:600
+    }
+    .btn:hover{filter:brightness(1.06)}
+    .btn-primary{background:var(--primary)}
+    .card{
+      background:var(--card); border:1px solid rgba(255,255,255,.06);
+      border-radius:18px; padding:26px; box-shadow:var(--shadow);
+    }
+    h1{margin:0 0 10px; font-size:28px; display:flex; gap:10px; align-items:center}
+    .muted{color:var(--muted); font-size:14px}
+    .fld{display:flex; flex-direction:column; gap:6px; margin-top:14px}
+    .fld input{
+      background:#0f1729; color:var(--text); border:1px solid rgba(255,255,255,.08);
+      border-radius:12px; padding:12px 14px; font-size:16px; outline:none
+    }
+    .row{display:flex; gap:10px; margin-top:16px}
+    .row .btn{flex:1}
+    .ok{color:var(--success)} .err{color:var(--danger)}
+    .ver{margin-top:8px; color:#8aa4ff; font-size:12px}
+    /* progress */
+    .progress{height:4px; width:100%; background:#0f1729; border-radius:999px; overflow:hidden; margin:14px 0 4px}
+    .bar{height:100%; width:0%; background:linear-gradient(90deg,#63a4ff,#4c8dff); transition:width .2s}
   </style>
 </head>
 <body>
-  <div class="topbar">
-    <button class="pill" id="themeBtn">🌙/🌞</button>
-    <button class="pill" id="refreshBtn">⟳ Atualizar</button>
-  </div>
-
   <div class="wrap">
+    <div class="row-top">
+      <button id="btnTheme" class="btn" title="Tema">🌙/🌞</button>
+      <button id="btnReload" class="btn" title="Forçar atualização">⟳ Atualizar</button>
+    </div>
+
     <div class="card">
       <h1>🚚 Romaneio</h1>
+      <div id="conn" class="muted">…</div>
 
-      <div id="diag" class="tiny">verificando conexão…</div>
-
-      <div class="row">
-        <label for="user">Usuário</label>
-        <input id="user" autocomplete="username" value="admin" placeholder="usuário">
+      <div class="fld">
+        <label>Usuário</label>
+        <input id="user" placeholder="admin" autocomplete="username"/>
+      </div>
+      <div class="fld">
+        <label>Senha</label>
+        <input id="pass" type="password" placeholder="••••••" autocomplete="current-password"/>
       </div>
 
       <div class="row">
-        <label for="pass">Senha</label>
-        <input id="pass" type="password" autocomplete="current-password" placeholder="senha">
+        <button id="btnLogin" class="btn btn-primary">Entrar</button>
+        <button id="btnPing" class="btn">Testar conexão</button>
       </div>
 
-      <div class="actions">
-        <button id="loginBtn" class="btn-primary">Entrar</button>
-        <button id="testBtn" class="btn-ghost">Testar conexão</button>
-      </div>
+      <div class="progress" style="display:none" id="prog"><div class="bar" id="bar"></div></div>
+      <div id="msg" class="muted" style="min-height:22px;margin-top:6px"></div>
 
-      <div id="msg"></div>
-
-      <div class="tiny">v1.0.4</div>
+      <div class="ver">v1.0.4</div>
     </div>
   </div>
 
 <script>
-  // ===== CONFIG =====
-  const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
-  const APP_URL  = "./app.html";
+const VERSION="v1.0.4";
+/* ====== CONFIG ====== */
+const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
 
-  // ===== THEME =====
-  const themeBtn = document.getElementById('themeBtn');
-  function setTheme(t){ document.documentElement.setAttribute('data-theme', t); localStorage.setItem('theme', t); }
-  setTheme(localStorage.getItem('theme')||'dark');
-  themeBtn.onclick = ()=> setTheme((localStorage.getItem('theme')||'dark')==='dark'?'light':'dark');
+/* ====== UI helpers ====== */
+const qs = s=>document.querySelector(s);
+const msg = (t, cls="muted") => { qs("#msg").className=cls; qs("#msg").textContent=t||""; };
+const setConn = (ok, txt) => qs("#conn").innerHTML = ok ? `Conectado • <span class="ok">${txt}</span>` : `<span class="err">${txt}</span>`;
+const prog = (v)=>{ qs("#prog").style.display="block"; qs("#bar").style.width = (v*100).toFixed(0)+"%"; if(v>=1) setTimeout(()=>qs("#prog").style.display="none",350); };
 
-  // ===== UTILS =====
-  const msg = (html,ok)=>{ const el=document.getElementById('msg'); el.className="alert"+(ok?" ok":""); el.innerHTML=html; }
-  const wait = (el,doing=true)=>{ el.disabled=doing; el.innerHTML = doing?'<span class="spinner"></span>Carregando…':el._label }
+/* ====== THEME ====== */
+(function(){
+  const key="rom_theme";
+  const apply=()=>{ document.documentElement.dataset.theme=localStorage.getItem(key)||"dark"; };
+  apply();
+  qs("#btnTheme").onclick=()=>{ localStorage.setItem(key, (localStorage.getItem(key)==="dark"?"light":"dark")); apply(); };
+  // dark/light real
+  const isDark = (localStorage.getItem(key) ?? "dark") === "dark";
+  if(isDark){ document.body.style.background = "linear-gradient(180deg,#0b1320 0%, #0d1528 100%)"; }
+})();
 
-  async function api(path, body={}){
-    const r = await fetch(API_BASE+'?path='+encodeURIComponent(path), {
-      method:'POST',
-      headers:{ 'Content-Type':'text/plain;charset=utf-8' }, // <- evita preflight/OPTIONS
-      body: JSON.stringify(body)
-    });
-    return r.json();
+/* ====== RELOAD ====== */
+qs("#btnReload").onclick=()=>{ location.href = location.pathname + "?v=" + Date.now(); };
+
+/* ====== API ====== */
+async function apiPost(path, data){
+  const r = await fetch(API_BASE + "?path=" + encodeURIComponent(path), {
+    method:"POST", headers:{ "Content-Type":"text/plain;charset=utf-8" },
+    body: JSON.stringify(data||{}), mode:"cors", credentials:"omit",
+  });
+  if(!r.ok) throw new Error("HTTP "+r.status);
+  return await r.json();
+}
+
+/* ====== PING ON LOAD ====== */
+(async()=>{
+  try{
+    const r = await apiPost("/ping", {});
+    setConn(true, new Date().toLocaleString());
+  }catch(e){
+    setConn(false,"Falha ao conectar");
   }
+})();
 
-  // ===== TESTE =====
-  async function test(){
-    const b = document.getElementById('testBtn'); b._label=b._label||b.textContent; wait(b,true);
-    try{
-      const r = await api('/ping', {});
-      msg('OK: '+(r.at||'')+' • '+JSON.stringify(r), true);
-    }catch(e){ msg('Falha no teste: '+e.message); }
-    finally{ wait(b,false); }
+/* ====== Ações ====== */
+qs("#btnPing").onclick = async ()=>{
+  try{ prog(.2); const r=await apiPost("/ping",{}); prog(1); msg("Conexão OK ✓","ok"); }
+  catch(e){ prog(1); msg("Falha ao conectar","err"); }
+};
+
+qs("#btnLogin").onclick = async ()=>{
+  const usuario = qs("#user").value.trim() || "admin";
+  const senha   = qs("#pass").value.trim();
+  if(!senha){ msg("Informe a senha","err"); return; }
+  try{
+    prog(.2);
+    const r = await apiPost("/login",{usuario,senha});
+    prog(.6);
+    if(r.error){ prog(1); msg(r.error,"err"); return; }
+    // guarda sessão
+    localStorage.setItem("rom_session", JSON.stringify(r.session));
+    prog(1);
+    msg("Login OK. Redirecionando…","ok");
+    location.href = "app.html?v="+Date.now();
+  }catch(e){
+    prog(1); msg("Erro: "+e.message,"err");
   }
-
-  // ===== LOGIN =====
-  async function login(){
-    const b = document.getElementById('loginBtn'); b._label=b._label||b.textContent; wait(b,true);
-    msg('');
-    try{
-      const usuario = document.getElementById('user').value.trim();
-      const senha   = document.getElementById('pass').value;
-      const r = await api('/login', {usuario, senha});
-      if(r.error){ msg('Erro: '+r.error); wait(b,false); return; }
-      // guarda sessão e vai para o app
-      localStorage.setItem('rom_session', JSON.stringify(r.session||{}));
-      location.href = APP_URL + '?v=' + Date.now();
-    }catch(e){ msg('Falha na rede: '+e.message); }
-    finally{ wait(b,false); }
-  }
-
-  // ===== UI =====
-  document.getElementById('loginBtn').onclick = login;
-  document.getElementById('testBtn').onclick  = test;
-  document.getElementById('refreshBtn').onclick = ()=> location.href = './index.html?v='+Date.now();
-
-  // auto-teste ao abrir
-  (async()=>{ try{
-    const r = await api('/ping', {});
-    document.getElementById('diag').textContent = 'Conectado • '+(r.at||'');
-  }catch(_){ document.getElementById('diag').textContent = 'Sem conexão com a API'; }
-  })();
+};
 </script>
 </body>
 </html>
